FIX: Resource are not fully resource when respawn more clear method and drop respawn method and using init instead due to no penatly on death respawn are full resource